# yotta

./: .gitignore  Makefile  README.md  __main__.py  pyproject.toml
cli/: decorators.py  types.py
conf/: __init__.py
core/: context.py  loader.py
core/management/: utility.py
core/management/commands/: startapp.py  startproject.py
ui/: console.py  theme.py
yotta/: rich_ui.py
yotta/cli/: decorators.py
yotta/cli/tests/: __init__.py  test_decorators.py
yotta/conf/: __init__.py
yotta/core/: context.py  loader.py  types.py
yotta/core/management/: __init__.py  utility.py
yotta/core/management/commands/: startapp.py  startcommand.py  startproject.py
yotta/core/tests/: __init__.py  test_conf_settings.py  test_context.py  test_context_settings.py  test_integration_scaffold.py  test_loader.py  test_scaffolding.py  test_startcommand.py  test_types.py
yotta/ui/: __init__.py  console.py  logo.py  spinner.py  theme.py  yotta_rich.py
yotta/ui/tests/: test_theme_selection.py
yotta/ui/tui/: __init__.py  app.py
